add definition list markup to basic content page

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -147,6 +147,17 @@
       </tbody>
     </table>
 
+    <p>Dignissimos autem sit deserunt ratione illum reiciendis, atque, facere repellat quaerat excepturi tempore neque cupiditate. Ut unde autem dolores, accusamus, magnam pariatur, facere corrupti doloribus obcaecati fugiat earum quis nisi.</p>
+
+    <dl>
+      <dt>lorem ipsum</dt>
+      <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eaque voluptatum error reiciendis eligendi officia atque praesentium aut quasi adipisci, corporis sapiente ut quod labore? Corrupti a libero sapiente obcaecati.</dd>
+      <dt>lorem ipsum</dt>
+      <dd>Necessitatibus vero vel veniam repellendus perferendis at, esse debitis consequatur a inventore dicta, dolor eveniet iure nulla voluptatum eaque modi quasi hic veritatis beatae sint sequi? Cumque soluta quia atque.</dd>
+      <dt>lorem ipsum</dt>
+      <dd>Quisquam ab sunt magni odio animi, iusto blanditiis error ratione, beatae quia autem cumque dicta quasi eos totam deserunt nesciunt id voluptatem illum aperiam voluptates? Nesciunt doloremque maxime rerum libero!</dd>
+    </dl>
+
   </div>
 
   {% include 'paragraphs/schedule.twig' %}
