--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -62,8 +62,8 @@
   <p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
 
   {# G1 text paragraph #}
-  <div class="typography">
-    <h2>Some headline here</h2>
+  <div class="text typography">
+    <h2>Some headline here (h2)</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus reiciendis odit, adipisci consequatur repellat non distinctio consequuntur delectus, sit veritatis ullam quaerat dolorem perspiciatis voluptas sed pariatur assumenda ut sint.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus reiciendis odit, adipisci consequatur repellat non distinctio consequuntur delectus, sit veritatis ullam quaerat dolorem perspiciatis voluptas sed pariatur assumenda ut sint.</p>
     <h3>Some headline here (h3)</h3>
