--- a/src/scss/components/_slideshow.scss
+++ b/src/scss/components/_slideshow.scss
@@ -3,28 +3,44 @@
 }
 
 .slideshow__title {
-  margin-bottom: 10px;
-  font-size: 22px;
+  @include section-title();
 }
 
 .slideshow__container {
-  background-color: $teal;
+  // background-color: $teal;
 }
 
 .slideshow__content {
   // background-color: $teal;
+  position: relative;
 }
 
-.slideshow__item {
+.slideshow__preloader {
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid $brand-primary;
+  border-top-color: transparent;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%, 0);
+}
+
+.slideshow__body {
+  padding: 1rem;
+  border: 1px solid $border-color;
+  display: flex;
+  align-items: flex-start;
 }
 
 .slideshow__caption {
-  color: $white;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
-  font-family: $font-family-serif;
-  font-size: 18px;
+  animation: fadeIn 0.2s;
+  flex: 1;
+  font-size: $caption-font-size;
+}
+
+.slideshow__item {
 }
 
 .slideshow__footer {
@@ -33,13 +49,14 @@
 }
 
 .slideshow__controls {
-  display: inline-flex;
+  display: flex;
+  flex: 0 0 auto;
 }
 
 .slideshow__button {
   border: 0;
   background-color: transparent;
-  color: $white;
+  color: $brand-primary;
   padding: 10px;
   cursor: pointer;
 
@@ -49,7 +66,7 @@
 }
 
 .slideshow__pagination {
-  color: $white;
+  // color: $white;
   min-width: 50px;
   text-align: center;
   padding-top: 10px;
