--- a/src/templates/paragraphs/slideshow.twig
+++ b/src/templates/paragraphs/slideshow.twig
@@ -4,17 +4,36 @@
   <div class="slideshow__container swiper-container js-slideshow">
     <div class="slideshow__content swiper-wrapper">
       {% for i in 0..2 %}
-        <figure class="media media--image slideshow__item swiper-slide">
-          <img data-src="//placehold.it/1280x720" alt="" class="swiper-lazy">
-          <figcaption class="slideshow__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit</figcaption>
-        </figure>
+        <div class="slideshow__item swiper-slide">
+          <figure class="media media--image">
+            <img src="//placehold.it/1280x720" alt="" class="swiper-lazy">
+            <figcaption class="media__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit</figcaption>
+          </figure>
+        </div>
       {% endfor %}
-        <figure class="media media--image slideshow__item swiper-slide">
-          <img data-src="//placehold.it/1280x720/000" alt="" class="swiper-lazy">
-          <figcaption class="slideshow__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit</figcaption>
-        </figure>
+        <div class="slideshow__item swiper-slide">
+          <figure class="media media--image">
+            <img src="//placehold.it/500x500" alt="" class="swiper-lazy">
+            <figcaption class="media__caption">Lorem ipsum dolor adipisicing elit</figcaption>
+          </figure>
+        </div>
+        <div class="slideshow__item swiper-slide">
+          <figure class="media media--image">
+            <img src="//placehold.it/200x200" alt="" class="swiper-lazy">
+            <figcaption class="media__caption">Lorem ipsum dolor adipisicing elit</figcaption>
+          </figure>
+        </div>
+        <div class="slideshow__item swiper-slide">
+          <figure class="media media--image">
+            <img src="//placehold.it/720x1280" alt="" class="swiper-lazy">
+            <figcaption class="media__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit lorem ipsum dolor set (Photo: John Doe)</figcaption>
+          </figure>
+        </div>
     </div>
-    <div class="slideshow__footer">
+    <div class="slideshow__body">
+      <div class="slideshow__caption">
+        <p class="js-slideshow-caption"></p>
+      </div>
       <div class="slideshow__controls">
         <button class="slideshow__button slideshow__button--prev js-slideshow-prev" aria-label="Previous slide">
           <svg class="icon" aria-hidden="true">
