--- a/src/templates/t12-areas-of-focus.twig
+++ b/src/templates/t12-areas-of-focus.twig
@@ -17,12 +17,19 @@
     <div class="row">
       <div class="col-md-push-1 col-md-9">
         <p class="lead mb-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a nulla magni molestias? Natus itaque adipisci molestiae mollitia voluptatum fugit illum hic reiciendis, omnis fugiat sapiente vitae, quia nobis eaque!</p>
-        {% include 'partials/grid-nav.twig' %}
       </div>
     </div>
   </div>
 
   {% include 'partials/mission-selector.twig' %}
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-push-1 col-md-9">
+        {% include 'partials/grid-nav.twig' %}
+      </div>
+    </div>
+  </div>
 
   {% include 'partials/callout-group.twig' %}
 
