--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'components/callout';
 @import 'components/card';
 @import 'components/carousel';
+@import 'components/chart';
 @import 'components/course-list';
 @import 'components/drawer';
 @import 'components/event-detail';
