--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -27,6 +27,6 @@
   </div>
   {% include 'partials/mission-modal.twig' %}
   <script src="js/bundle.js" async></script>
-  <script src="https://unpkg.com/chart.js@2.7.1/dist/Chart.min.js"></script>
+  {% block scripts %}{% endblock %}
 </body>
 </html>
