--- a/src/templates/partials/chart.twig
+++ b/src/templates/partials/chart.twig
@@ -1,22 +1,23 @@
-<div class="mb-6">
-  <h1>{{title}}</h1>
-  <canvas id="midd-chart-{{id}}"></canvas>
+<div class="chart">
+  <h3 class="chart__title">{{title}}</h3>
+  <div class="chart__container">
+    <canvas id="midd-chart-{{id}}"></canvas>
+  </div>
 </div>
 
 <script>
   window.addEventListener('load', function() {
-    var elem = document.getElementById('midd-chart-{{id}}');
-    new Chart(elem, {
-      type: '{{type|default('pie')}}',
-      data: {
-        datasets: [
-          {
-            data: [{{data}}],
-            label: '{{label}}'
-          }
-        ],
-        labels: [{% for item in labels %}'{{item}}'{% if not loop.last %},{% endif %}{% endfor %}]
-      }
-    });
+
+    var selector = '#midd-chart-{{id}}';
+
+    var options = {
+      type: '{{type}}',
+      data: [{{data}}],
+      label: '{{label}}',
+      labels: [{% for item in labels %}'{{item}}'{% if not loop.last %},{% endif %}{% endfor %}],
+    };
+
+    window.loadChart(selector, options);
+
   });
 </script>
