allow map chart to have configurable title

--- a/src/templates/paragraphs/map-chart.twig
+++ b/src/templates/paragraphs/map-chart.twig
@@ -1,5 +1,5 @@
 <div class="chart">
-  <h3 class="chart__title">Map example</h3>
+  <h3 class="chart__title">{{title}}</h3>
   {% include 'partials/world.twig' with { id: id } %}
 
   <p>
