--- a/src/templates/charts.twig
+++ b/src/templates/charts.twig
@@ -92,6 +92,7 @@
 
 
   {% include 'paragraphs/map-chart.twig' with {
+    title: 'Map example',
     id: '1234',
     items: [
       {name: 'Germany', abbr: 'de'},
