--- a/src/scss/components/_callout-links.scss
+++ b/src/scss/components/_callout-links.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.callout-links__title {
+  font-size: 18px;
+  font-weight: $font-weight-medium;
+  font-family: $font-family-sans-serif;
+  margin-bottom: 20px;
+}
+
 .callout-links__list {
   margin-bottom: 30px;
 
