--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -15,7 +15,9 @@
   </div>
   <figcaption class="video__body">
     <h3 class="video__title">Practical Skills for Positive Change</h3>
-    <p class="video__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra aliquet lacus a tristique. Suspendisse commodo pulvinar nisi vel laoreet. Pellentesque id hendrerit velit, vitae consectetur libero.</p>
+    <div class="typography">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra aliquet lacus a tristique. Suspendisse commodo pulvinar nisi vel laoreet. Pellentesque id hendrerit velit, vitae consectetur libero.</p>
+    </div>
     {% if transcript %}
       <a href="#midd-video-{{id}}" class="video__transcript-button" data-toggle-target=".js-video-transcript-{{id}}" aria-label="Toggle transcript" aria-expanded="false">
           Transcript
