--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -55,9 +55,12 @@
 
 {% block layout_content %}
 
-  <figure class="page__image">
-    {% include 'partials/img.twig' with { name: 'featured' } %}
-  </figure>
+  <div class="page__image">
+    <figure class="media media--image">
+      {% include 'partials/img.twig' with { name: 'featured' } %}
+      <figcaption class="media__caption">basic content image caption</figcaption>
+    </figure>
+  </div>
 
   <p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
 
