--- a/src/scss/components/_page-header.scss
+++ b/src/scss/components/_page-header.scss
@@ -26,12 +26,10 @@
 }
 
 .page-header__title {
-  font-weight: $font-weight-semibold;
   font-size: $h1-font-size;
-  margin-bottom: 40px;
+  margin-bottom: 1.5rem;
 
   @include media(md) {
-    margin-top: 40px;
-    margin-bottom: 1.5rem;
+    margin-top: 3rem;
   }
 }
