revise two col text markup

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -94,8 +94,9 @@
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
 @import 'components/tags';
-@import 'components/text';
 @import 'components/teaser';
+@import 'components/text';
+@import 'components/two-col-text';
 @import 'components/video';
 
 // utils
