use variable for base paragraph font size

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -56,7 +56,7 @@ fieldset {
 
 p {
   font-family: $font-family-base;
-  font-size: $font-size-base;
+  font-size: $paragraph-font-size;
   margin-top: 0;
   margin-bottom: 0;
 }
