revise callout group styles

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -214,3 +214,8 @@ $section-title-margin-bottom: 2rem;
 
 // component/D8 "Paragraphs"
 $component-margin-bottom: 3rem;
+
+// callouts
+$callout-title-font-size: $h2-font-size;
+$calling-title-margin-bottom: 0.5rem;
+$callout-text-font-size: $paragraph-font-size;
