--- a/src/templates/partials/callout-group.twig
+++ b/src/templates/partials/callout-group.twig
@@ -1,27 +1,31 @@
 <div class="callout-group">
   <div class="callout-group__row">
     <div class="callout-group__item">
-      {% include 'partials/callout-group-item.twig' with {
-          title: 'Take a Step Forward',
+      {% include 'partials/callout.twig' with {
+          title: 'How will you change the world?',
+          text: 'We can help.',
           buttonText: 'Request Info'
       } %}
     </div>
     <div class="callout-group__item">
-      {% include 'partials/callout-group-item.twig' with {
-        title: 'Experience Monterey',
+      {% include 'partials/callout.twig' with {
+        title: 'What makes us different?',
+        text: 'See for yourself.',
         buttonText: 'Visit Campus'
       } %}
     </div>
     <div class="callout-group__item">
-      {% include 'partials/callout-group-item.twig' with {
-        title: 'Preview Day, July 15',
+      {% include 'partials/callout.twig' with {
+        title: 'Preview Days',
+        text: 'July 15',
         buttonText: 'Register'
       } %}
     </div>
     <div class="callout-group__item">
-      {% include 'partials/callout-group-item.twig' with {
-        title: 'Spring 2017 Applications<br>Now Open',
-        buttonText: 'Explore Requirements'
+      {% include 'partials/callout.twig' with {
+        title: 'Application Deadline',
+        text: 'March 30',
+        buttonText: 'Apply Now'
       } %}
     </div>
   </div>
