--- a/src/scss/components/_callout-group.scss
+++ b/src/scss/components/_callout-group.scss
@@ -1,7 +1,7 @@
 .callout-group {
-}
-.callout-group {
-  @include make-container();
+  @include media(md) {
+    display: flex;
+  }
 }
 
 .callout-group__row {
@@ -10,6 +10,7 @@
 
 .callout-group__item {
   @include make-col-ready();
+  // margin-bottom: 2rem;
 
   &:not(:last-of-type) {
     border-bottom: 1px solid $border-color;
@@ -22,5 +23,6 @@
 
   @include media(lg) {
     @include make-col(3);
+    margin-bottom: 0;
   }
 }
