--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -9,6 +9,8 @@
   padding-bottom: 60px;
   text-align: center;
   margin-bottom: 60px;
+  display: flex;
+  flex-direction: column;
 
   @include media(lg) {
     text-align: left;
@@ -16,6 +18,13 @@
     margin-bottom: 0;
     padding-bottom: 0;
     height: 100%;
+  }
+}
+
+.site-footer__social {
+  margin-top: 2rem;
+  @include media(lg) {
+    margin-top: auto;
   }
 }
 
