--- a/src/templates/partials/callout.twig
+++ b/src/templates/partials/callout.twig
@@ -1,30 +1,9 @@
-<div class="callout{% if className %} {{className}}{% endif %}{% if light %} callout--light{% endif %}{% if theme %} callout--{{theme}}{% endif %}">
-  <div class="callout__header">
-    {% if preheader %}
-      <em class="callout__preheader">{{preheader}}</em>
-    {% endif %}
+<div class="callout{% if light %} callout--light{% endif %}">
+  <div class="callout__body">
     <h3 class="callout__title">{{title}}</h3>
+    <p class="callout__text">{{text}}</p>
   </div>
-
-  {% set body_block = block('body') %}
-
-  {% if body_block is not empty or subtext %}
-    <div class="callout__body">
-      {% if subtext %}
-        <p class="callout__subtext">{{subtext}}</p>
-      {% endif %}
-      {{ body_block|raw }}
-    </div>
-  {% endif %}
-
-  {% set footer_block = block('footer') %}
-
-  {% if footer_block is not empty or buttonHref or buttonText %}
-    <div class="callout__footer">
-      {% if buttonHref and buttonText %}
-        <a href="{{buttonHref}}" class="button button--{{buttonModifier | default('primary')}} callout__button">{{buttonText}}</a>
-      {% endif %}
-      {% block footer %}{% endblock %}
-    </div>
-  {% endif %}
+  <div class="callout__footer">
+    <a href="{{url}}" class="button button--{% if light %}secondary{% else %}primary{% endif %}">{{buttonText}}</a>
+  </div>
 </div>
