use rem units for list item spacing

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -221,6 +221,6 @@ $calling-title-margin-bottom: 0.5rem;
 $callout-text-font-size: $paragraph-font-size;
 
 // lists
-$list-item-margin-bottom: 10px;
-$list-item-margin-bottom-md: 30px;
-$list-item-margin-bottom-lg: 60px;
+$list-item-margin-bottom: 0.5rem;
+$list-item-margin-bottom-md: 2rem;
+$list-item-margin-bottom-lg: 3rem;
