--- a/src/templates/paragraphs/image.twig
+++ b/src/templates/paragraphs/image.twig
@@ -1,6 +1,6 @@
 <div class="image">
   <figure class="media media--image">
     {% include 'partials/img.twig' with { name: 'image' } %}
-    <figcaption class="media__caption">{{caption|default('captiont text here')}}</figcaption>
+    <figcaption class="media__caption">{{caption|default('Lorem ipsum dolor sit amet, consectetur adipiscing elit')}}</figcaption>
   </figure>
 </div>
