--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,6 +39,7 @@
 @import 'components/event-teaser';
 @import 'components/faq';
 @import 'components/filter';
+@import 'components/footer-callout';
 @import 'components/footer-menu';
 @import 'components/footer';
 @import 'components/form';
