comment out unused filter partial

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,7 +38,7 @@
 @import 'components/event-teaser-lite';
 @import 'components/event-teaser';
 @import 'components/faq';
-@import 'components/filter';
+// @import 'components/filter';
 @import 'components/footer-callout';
 @import 'components/footer-menu';
 @import 'components/footer';
