globally set paragraph line heights

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -57,6 +57,7 @@ fieldset {
 p {
   font-family: $font-family-base;
   font-size: $paragraph-font-size;
+  line-height: $paragraph-line-height;
   margin-top: 0;
   margin-bottom: 0;
 }
