--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -30,12 +30,13 @@
 }
 
 .video__body {
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 0.5rem;
   border: $border-width solid $border-color;
 }
 
 .video__title {
   font-size: $h3-font-size;
+  line-height: $h3-line-height;
   margin-bottom: 0.5rem;
 }
 
@@ -49,6 +50,7 @@
 
 .video__transcript-icon {
   // display: none;
+  margin-left: 0.5rem;
 }
 
 .video__transcript-icon--close {
