--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -130,42 +130,42 @@
 
   h1 {
     font-size: $h1-font-size;
+    line-height: $h1-line-height;
     margin-top: $h1-margin-top;
     margin-bottom: $h1-margin-bottom;
   }
 
   h2 {
     font-size: $h2-font-size;
+    line-height: $h2-line-height;
     margin-top: $h2-margin-top;
     margin-bottom: $h2-margin-bottom;
   }
 
   h3 {
     font-size: $h3-font-size;
+    line-height: $h3-line-height;
     margin-top: $h3-margin-top;
     margin-bottom: $h3-margin-bottom;
   }
 
   h4 {
     font-size: $h4-font-size;
+    line-height: $h4-line-height;
     margin-top: $h4-margin-top;
     margin-bottom: $h4-margin-bottom;
   }
 
   h5 {
     font-size: $h5-font-size;
-    font-family: $font-family-sans-serif;
-    font-weight: $font-weight-semibold;
+    line-height: $h5-line-height;
     margin-top: $h5-margin-top;
     margin-bottom: $h5-margin-bottom;
   }
 
   h6 {
     font-size: $h6-font-size;
-    font-family: $font-family-sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: $font-weight-light;
+    line-height: $h6-line-height;
     margin-top: $h6-margin-top;
     margin-bottom: $h6-margin-bottom;
   }
