--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -100,31 +100,37 @@ $headings-line-height: 1.2;
 $headings-margin-bottom: 0;
 
 $h1-font-size: 32px;
+$h1-line-height: $h1-font-size + 10px;
 $h1-margin-top: 4.5rem;
 $h1-margin-bottom: 1.5rem;
 
 $h2-font-size: 26px;
-$h2-margin-top: 4rem;
+$h2-line-height: $h2-font-size + 10px;
+$h2-margin-top: 3rem;
 $h2-margin-bottom: 1.5rem;
 
 $h3-font-size: 20px;
+$h3-line-height: $h3-font-size + 10px;
 $h3-margin-top: 2.5rem;
 $h3-margin-bottom: 1.5rem;
 
 $h4-font-size: 18px;
+$h4-line-height: $h4-font-size + 10px;
 $h4-margin-top: 1.5rem;
-$h4-margin-bottom: 0;
+$h4-margin-bottom: 0.25rem;
 
 $h5-font-size: 16px;
+$h5-line-height: $h5-font-size + 10px;
 $h5-margin-top: 1.5rem;
 $h5-margin-bottom: 0.25rem;
 
-$h6-font-size: 16px;
+$h6-font-size: 14px;
+$h6-line-height: $h6-font-size + 10px;
 $h6-margin-top: 1.5rem;
-$h6-margin-bottom: 0.25rem;
+$h6-margin-bottom: 0rem;
 
 $lead-font-size: 26px;
-$lead-line-height: 36px;
+$lead-line-height: 38px;
 $lead-margin-bottom: 3.5rem;
 
 // Links
