--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -45,7 +45,7 @@
     ul,
     ol {
       margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
       padding-left: 2rem;
     }
   }
@@ -74,8 +74,14 @@
     font-size: $paragraph-font-size;
     line-height: $paragraph-line-height;
 
+    li {
+      &:not(:last-of-type) {
+        margin-bottom: 0.5rem;
+      }
+    }
+
     &:not(:last-of-type) {
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }
 
     p:last-child {
