tweak definition list styles

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -90,7 +90,10 @@
   }
 
   dl {
-    margin-bottom: 1.5rem;
+    font-size: $paragraph-font-size;
+    line-height: $paragraph-line-height;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
 
     @include media(md) {
       display: flex;
