--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -23,11 +23,11 @@
   left: $left;
 }
 
-@mixin section-title() {
+@mixin section-title($margin-bottom: $section-title-margin-bottom) {
   text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: $font-weight-semibold;
+  letter-spacing: 2.5px;
+  font-weight: $font-weight-medium;
   font-family: $font-family-sans-serif;
   font-size: 14px;
-  margin-bottom: $section-title-margin-bottom;
+  margin-bottom: $margin-bottom;
 }
