specify line height accordion titles

--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -7,6 +7,7 @@
     color: $gray;
     font-size: 14px;
     font-family: $font-family-serif;
+    line-height: 30px;
     margin-right: 1rem;
   }
 
