--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -12,7 +12,7 @@
     <h3 class="event-teaser__title" id="midd-event-label-{{i}}"><a href="{{url}}">Lorem ipsum dolor set</a></h3>
     <p class="event-teaser__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente totam sequi est. Expedita adipisci fugiat eum nisi. Provident cupiditate fuga enim aliquid repellat rem a, earum accusamus delectus quod deleniti!</p>
     <ul class="event-teaser__metalist">
-      <li class="event-teaser__metaitem"><em>Open to the Public</em></li>
+      <li class="event-teaser__metaitem">Open to the Public</li>
     </ul>
   </div>
 </article>
