revise section styles

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -1,22 +1,22 @@
 .section {
-  margin-bottom: 100px;
+  margin-bottom: $component-margin-bottom;
 }
 
 .section--aside {
-  margin-bottom: 80px;
+  margin-bottom: $component-margin-bottom / 2;
 
   .section__header {
-    margin-bottom: 25px;
+    margin-bottom: $section-title-margin-bottom / 2;
   }
 
   .section__title {
     color: $gray;
-    font-size: 13px;
   }
 }
 
 .section__header {
-  margin-bottom: 50px;
+  margin-bottom: $section-title-margin-bottom;
+
   @include media(md) {
     display: flex;
     align-items: center;
@@ -25,13 +25,14 @@
 }
 
 .section__title {
-  @include section-title();
+  // TODO: need to not apply margin instead of reseting it to 0
+  @include section-title(0);
 }
 
 .section__link {
-  margin-top: 10px;
   display: inline-block;
   font-weight: $font-weight-medium;
+  margin-top: 1rem;
   @include link-border();
 
   @include media(md) {
