--- a/src/scss/components/_story-teaser.scss
+++ b/src/scss/components/_story-teaser.scss
@@ -15,20 +15,20 @@
 
 .story-teaser__media {
   float: right;
-  padding-left: 10px;
-  padding-bottom: 10px;
+  padding-left: 1.5rem;
+  padding-bottom: 1.5rem;
 
   .story-teaser--featured & {
     float: none;
     padding-left: 0;
     padding-bottom: 0;
-    margin-bottom: 20px;
+    margin-bottom: 1.5rem;
   }
 
   @include media(md) {
     flex: 0 0 auto;
     float: none;
-    padding-left: 20px;
+    padding-left: 1.5rem;
     padding-bottom: 0;
   }
 }
@@ -43,21 +43,21 @@
 .story-teaser__pubdate {
   display: block;
   font-weight: $font-weight-semibold;
-  font-size: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .story-teaser__title {
-  font-size: 22px;
-  margin-bottom: 10px;
+  font-size: $h3-font-size;
+  line-height: $h3-line-height;
+  margin-bottom: 0.5rem;
 }
 
 .story-teaser__author {
   font-family: $font-family-sans-serif;
   font-size: 14px;
-  color: $black;
   font-weight: $font-weight-medium;
-  margin-bottom: 20px;
+  line-height: 20px;
+  margin-bottom: 1rem;
 
   a {
     @include link-border();
