remove caption override on example image

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -164,9 +164,7 @@
 
   {# G3 image paragraph #}
 
-  {% include 'paragraphs/image.twig' with {
-    caption: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
-  } %}
+  {% include 'paragraphs/image.twig' %}
 
   {% include 'paragraphs/two-col-text.twig' %}
 
