remove unit for 0 value

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -127,7 +127,7 @@ $h5-margin-bottom: 0.25rem;
 $h6-font-size: 14px;
 $h6-line-height: $h6-font-size + 10px;
 $h6-margin-top: 1.5rem;
-$h6-margin-bottom: 0rem;
+$h6-margin-bottom: 0;
 
 $lead-font-size: 26px;
 $lead-line-height: 38px;
