use lead partial

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -57,7 +57,7 @@
 
   {% include 'partials/page-image.twig' %}
 
-  <p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
+  {% include 'partials/lead.twig' %}
 
   {# G1 text paragraph #}
   <div class="text typography">
