--- a/src/templates/partials/lead.twig
+++ b/src/templates/partials/lead.twig
@@ -1,1 +1,1 @@
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum a nulla magni molestias? Natus itaque adipisci molestiae mollitia voluptatum fugit illum hic reiciendis, omnis fugiat sapiente vitae, quia nobis eaque!</p>
+<p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit. Harum a nulla magni molestias? Natus itaque adipisci molestiae mollitia voluptatum fugit illum hic reiciendis, omnis fugiat sapiente vitae, quia nobis eaque!</p>
