add section title line height

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -29,5 +29,6 @@
   font-weight: $font-weight-medium;
   font-family: $font-family-sans-serif;
   font-size: 14px;
+  line-height: 20px;
   margin-bottom: $margin-bottom;
 }
