set grid nav titles to be bold like headings

--- a/src/scss/components/_grid-nav.scss
+++ b/src/scss/components/_grid-nav.scss
@@ -62,6 +62,7 @@
   font-size: $h3-font-size;
   font-family: $headings-font-family;
   line-height: $h3-line-height;
+  font-weight: $headings-font-weight;
   margin-bottom: 0.5rem;
 }
 
