wrap callout group in its required container

--- a/src/templates/t03-program.twig
+++ b/src/templates/t03-program.twig
@@ -68,5 +68,7 @@
 {% endblock %}
 
 {% block page_footer %}
-  {% include 'partials/callout-group.twig' %}
+  <div class="container">
+    {% include 'partials/callout-group.twig' %}
+  </div>
 {% endblock %}
