--- a/src/templates/t03-program.twig
+++ b/src/templates/t03-program.twig
@@ -45,21 +45,7 @@
 
   {% include 'paragraphs/related-basic-content.twig' %}
 
-  {% embed 'partials/section.twig' with {
-    title: 'Our faculty are professionals, on campus and in the field',
-    moreLinkHref: '#',
-    moreLinkText: 'Call to action'
-  } %}
-    {% block content %}
-      <ol class="list list--lg">
-        {% for i in 0..2 %}
-          <li class="list__item">
-            {% include 'partials/story-teaser.twig' %}
-          </li>
-        {% endfor %}
-      </ol>
-    {% endblock %}
-  {% endembed %}
+  {% include 'paragraphs/related-stories-list.twig' %}
 
   <div class="grid-expand">
     {% include 'partials/program-panel.twig' %}
