--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -3,20 +3,15 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  padding-bottom: 60px;
-  padding-top: 60px;
-  margin-bottom: 60px;
+  padding-bottom: 4rem;
+  padding-top: 4rem;
+  margin-bottom: $component-margin-bottom;
 
   @include make-gutters();
 }
 
 .projects__section-title {
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  font-weight: $font-weight-semibold;
-  font-family: $font-family-sans-serif;
-  font-size: 14px;
-  margin-bottom: 60px;
+  @include section-title();
   color: $white;
 }
 
@@ -27,33 +22,32 @@
   text-align: center;
 }
 
+.projects__list {
+  margin-bottom: 3rem;
+}
+
 .projects__item {
   position: relative;
-  margin-bottom: 80px;
 
   &:not(:last-of-type) {
+    margin-bottom: 2rem;
     &:after {
       content: '';
       display: block;
       width: 50px;
       background-color: $white;
-      height: 2px;
-      position: absolute;
-      left: 50%;
-      bottom: -50px;
-      transform: translateX(-50%);
+      height: 1px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 2rem;
     }
   }
 }
 
 .projects__title {
-  font-family: $font-family-serif;
-  font-size: 22px;
-  margin-bottom: 20px;
-
-  @include media(lg) {
-    font-size: 28px;
-  }
+  font-size: $h2-font-size;
+  line-height: $h2-line-height;
+  margin-bottom: 1rem;
 }
 
 .projects__link {
