change projects button to outline

--- a/src/templates/partials/projects.twig
+++ b/src/templates/partials/projects.twig
@@ -11,6 +11,6 @@
         </li>
       {% endfor %}
     </ul>
-    <a href="#" class="button button--secondary">Explore Opportunities with our International Partners</a>
+    <a href="#" class="button button--secondary button--outline">Explore Opportunities</a>
   </div>
 </section>
