--- a/src/scss/components/_story-teaser-lite.scss
+++ b/src/scss/components/_story-teaser-lite.scss
@@ -2,8 +2,9 @@
 }
 
 .story-teaser-lite__title {
-  font-size: 22px;
-  margin-bottom: 20px;
+  font-size: $h3-font-size;
+  line-height: $h3-line-height;
+  margin-bottom: 0.5rem;
 }
 
 .story-teaser-lite__text {
