--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -12,47 +12,7 @@
       overlap: true
     } %}
 
-    <div class="row text-center text-md-left section">
-      <div class="col-md-6 col-lg-3 border-md-r mb-4 mb-lg-0">
-        <div class="border-b border-md-b-0 pb-4 pb-md-0">
-          {% include 'partials/card.twig' with {
-            title: 'Practical Innovation',
-            text: 'The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.'
-          } %}
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 border-lg-r mb-4 mb-lg-0">
-        <div class="border-b border-md-b-0 pb-4 pb-md-0">
-        {% include 'partials/card.twig' with {
-          title: 'Cultural Fluency',
-          text: 'Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.'
-        } %}
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3 border-md-r">
-        <div class="border-b border-md-b-0 pb-4 pb-md-0 mb-4 mb-md-0">
-        {% include 'partials/callout.twig' with {
-          preheader: 'Register for',
-          title: 'Monterey Forum',
-          subtext: 'March 28-29, 2017',
-          buttonText: 'Register',
-          buttonHref: '#',
-        } %}
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        {% include 'partials/callout.twig' with {
-          preheader: 'Application for',
-          title: 'Spring 2017 Now Open',
-          buttonText: 'Apply Now',
-          buttonHref: '#',
-        } %}
-      </div>
-    </div>
-
-  </div>
-
-  <div class="container">
+    {% include 'partials/callout-group.twig' %}
 
     <div class="section">
       <div class="row">
