tweak homepage hero styles

--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -9,7 +9,7 @@
       </h1>
       <p class="homepage-hero__text">Access to safe water and adequate sanitation services has proven to be one of the most efficient ways of improving human health.</p>
       <div class="homepage-hero__more-link">
-        <a href="#" class="button button--secondary">Read More<span class="sr-only"> of "Water Sanitation Research and Development, India"</span></a>
+        <a href="#" class="button button--secondary button--outline">Read More<span class="sr-only"> of "Water Sanitation Research and Development, India"</span></a>
       </div>
     </div>
   </section>
