remove courselist bottom margin
course list should only be rendered within a profile-section which has bottom margin already

--- a/src/scss/components/_course-list.scss
+++ b/src/scss/components/_course-list.scss
@@ -1,5 +1,5 @@
 .course-list {
-  margin-bottom: $component-margin-bottom;
+  // margin-bottom: $component-margin-bottom;
 }
 
 .course-list__icon {
