--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -41,8 +41,9 @@
 }
 
 .accordion-item__title {
-  font-size: $h3-font-size;
-  line-height: $h3-line-height;
+  font-size: $paragraph-font-size;
+  line-height: $paragraph-line-height;
+  font-family: $font-family-sans-serif;
 }
 
 .accordion-item__link {
