--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -33,6 +33,16 @@
   }
 }
 
+.list--inline {
+  .list__item {
+    display: inline-block;
+
+    &:not(:last-child) {
+      margin-right: 1rem;
+    }
+  }
+}
+
 .list__icon {
   vertical-align: top;
   margin-right: 10px;
