underline profile info links

--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -34,11 +34,11 @@
                     <dt class="profile-info__title">Tel</dt>
                     <dd class="profile-info__text"><a href="tel:6173247535">617-324-7535</a></dd>
                     <dt class="profile-info__title">Email</dt>
-                    <dd class="profile-info__text"><a href="mailto:blevinger@middlebury.edu">blevinger@middlebury.edu</a></dd>
+                    <dd class="profile-info__text"><a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a></dd>
                     <dt class="profile-info__title">Office Hours</dt>
                     <dd class="profile-info__text">Tuesdays 3-4pm<br>Thursdays 11am-12pm</dd>
                     <dt class="profile-info__title sr-only">CV</dt>
-                    <dd class="profile-info__text"><a href="#">Download CV</a></dd>
+                    <dd class="profile-info__text"><a href="#" class="link-border">Download CV</a></dd>
                     <dt class="profile-info__title sr-only">Elsewhere</dt>
                     <dd class="profile-info__text">
                       {% include 'partials/social-links.twig' with {
