--- a/src/scss/components/_profile-section.scss
+++ b/src/scss/components/_profile-section.scss
@@ -1,5 +1,10 @@
 .profile-section {
   margin-bottom: 3rem;
+
+  & + & {
+    padding-top: 3rem;
+    border-top: 3px solid $border-color;
+  }
 }
 
 .profile-section__title {
