--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,21 +58,21 @@
 @import 'components/modal';
 @import 'components/page-callout';
 @import 'components/page-header';
-@import 'components/page-hero';
+// @import 'components/page-hero';
 @import 'components/page-nav';
 @import 'components/page';
 @import 'components/pagination';
 @import 'components/panel';
-@import 'components/profile-explorer';
+// @import 'components/profile-explorer';
 @import 'components/profile-info';
 @import 'components/profile-section';
-@import 'components/profile-spotlight-item';
+// @import 'components/profile-spotlight-item';
 @import 'components/profile-teaser';
 @import 'components/program-panel';
-@import 'components/program-spotlight-item';
-@import 'components/program-spotlight';
+// @import 'components/program-spotlight-item';
+// @import 'components/program-spotlight';
 @import 'components/projects';
-@import 'components/publications';
+// @import 'components/publications';
 @import 'components/pullquote';
 @import 'components/schedule';
 @import 'components/search-form';
